[main-svc] правки по замечаниям ревью